deployments/deployment-configmap.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "hello-java-configmap"
  namespace: "default"
  labels:
    app: "hello-java"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "hello-java"
  template:
    metadata:
      labels:
        app: "hello-java"
    spec:
      containers:
      - name: "hello-java-sha256"
        image: "gcr.io/tcsplayground/hello-java@sha256:489525fa74816644f9d369d4717fd022f547af846a063b14d14e5e24ed28a2e9"
