deployments/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "hello-java"
  labels:
    app: "hello-java"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "hello-java"
  template:
    metadata:
      labels:
        app: "hello-java"
    spec:
      containers:
      - name: "hello-java-sha256"
        image: "gcr.io/tcsplayground/hello-java@sha256:9d81fd048acb84412340f398290fa0c35d4a5c17747581186cc31abbc99f92bf"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
