deployments/mariadb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"drupal-mariadb","app.kubernetes.io/name":"drupal-hil-test"},"name":"drupal-hil-test-mariadb","namespace":"devportal","ownerReferences":[{"apiVersion":"app.k8s.io/v1beta1","blockOwnerDeletion":true,"kind":"Application","name":"drupal-hil-test","uid":"be749583-7bb2-4c30-b846-585b5b345420"}]},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/component":"drupal-ma [...]
  creationTimestamp: "2020-04-07T19:10:01Z"
  generation: 1
  labels:
    app.kubernetes.io/component: drupal-mariadb
    app.kubernetes.io/name: drupal-hil-test
  name: drupal-hil-test-mariadb
  namespace: devportal
  ownerReferences:
    - apiVersion: app.k8s.io/v1beta1
      blockOwnerDeletion: true
      kind: Application
      name: drupal-hil-test
      uid: be749583-7bb2-4c30-b846-585b5b345420
  resourceVersion: "7332911"
  selfLink: /apis/apps/v1/namespaces/devportal/statefulsets/drupal-hil-test-mariadb
  uid: 087fa302-a6da-44e4-b3dc-12a04ef8ea2a
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: drupal-mariadb
      app.kubernetes.io/name: drupal-hil-test
  serviceName: drupal-hil-test-mariadb-svc
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: drupal-mariadb
        app.kubernetes.io/name: drupal-hil-test
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: root-password
                  name: drupal-hil-test-mariadb-secret
            - name: MYSQL_DATABASE
              value: drupal
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  key: drupal-user
                  name: drupal-hil-test-mariadb-secret
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: drupal-password
                  name: drupal-hil-test-mariadb-secret
          image: gcr.io/cloud-marketplace/google/drupal/mariadb:8.8.4-20200326-152553
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec mysqladmin status -uroot -p$MYSQL_ROOT_PASSWORD
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - exec mysqladmin status -uroot -p$MYSQL_ROOT_PASSWORD
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: drupal-hil-test-mariadb-pvc
              subPath: data
            - mountPath: /docker-entrypoint-initdb.d
              name: mariadb-config
              readOnly: true
        - env:
            - name: MYSQLD_EXPORTER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: mysqld-exporter-pass
                  name: drupal-hil-test-mysqld-exporter-secret
            - name: DATA_SOURCE_NAME
              value: mysqld-exporter:$(MYSQLD_EXPORTER_PASSWORD)@(127.0.0.1:3306)/
          image: gcr.io/cloud-marketplace/google/drupal/mysqld-exporter:8.8.4-20200326-152553
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: 9104
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: mysqld-exporter
          ports:
            - containerPort: 9104
              name: exporter
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /metrics
              port: 9104
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - command:
            - /monitor
            - --stackdriver-prefix=custom.googleapis.com
            - --source=mariadb:http://localhost:9104/metrics
            - --pod-id=$(POD_NAME)
            - --namespace-id=$(POD_NAMESPACE)
            - --monitored-resource-types=k8s
          image: gcr.io/cloud-marketplace/google/drupal/prometheus-to-sd:8.8.4-20200326-152553
          imagePullPolicy: IfNotPresent
          name: prometheus-to-sd
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mariadb-config
          secret:
            defaultMode: 420
            items:
              - key: mysqld_exporter.sql
                path: mysqld_exporter.sql
            secretName: drupal-hil-test-mysqld-exporter-secret
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        labels:
          app.kubernetes.io/component: drupal-server
          app.kubernetes.io/name: drupal-hil-test
        name: drupal-hil-test-mariadb-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: standard
        volumeMode: Filesystem
      status:
        phase: Pending
status:
  collisionCount: 0
  currentReplicas: 1
  currentRevision: drupal-hil-test-mariadb-656cb44847
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updateRevision: drupal-hil-test-mariadb-656cb44847
  updatedReplicas: 1
