deployments/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server-1
spec:
  containers:
   - name: web-server
     image: nginx
     volumeMounts:
       - mountPath: /var/lib/www/html
         name: nginx-pv
  volumes:
   - name: nginx-pv
     persistentVolumeClaim:
       claimName: test-data-disk-1
       readOnly: false
