deployments/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    svc: hello-java
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-java
  type: LoadBalancer
