deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java
  labels:
    svc: hello-java
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-java
  type: LoadBalancer
