deployments/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-java-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - hello-java-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    - uri:
        prefix: /healthcheck
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: hello-java
